UtahLiveDataTest/src/objects/FINETVendor__c.object
<CustomObject>
    <description>This is the custom object for the FINET Vendor</description>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNSNO__c</fullName>
        <label>DUNS NO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EINTIN__c</fullName>
        <label>EIN/TIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalName__c</fullName>
        <label>Legal Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorCustomerCode__c</fullName>
        <label>Vendor Customer Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VendorID__c</fullName>
        <label>Vendor ID</label>
        <type>TextArea</type>
    </fields>
    <label>FINETVendor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FINETVendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINETVendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>